# autonomous-agent-accountability

./: .gitignore  Dockerfile  README.md  anchor_ledger.py  build_verifier.py  consult_nexart_council.py  create_bundle.py  devpost_submission.md  inspect_db.py  judge_demo.sh  railway.json  requirements.txt  run_e2e_test.py  setup.sh  spec.md  test_adversarial_proxy.py  test_crash_windows.py  test_durable_counter_tool.py  test_ledger_idempotency.py  test_live_railway.py  test_nexart_parity.py  test_policy_and_lease.py  test_swagger_ui.py  vendor_js.py  verifier.html
.devcontainer/: devcontainer.json
daemon/: README.md  queue.db
daemon/.github/workflows/: ci.yml
daemon/crates/accountability-cli/tests/: exfiltration_test.rs
daemon/crates/accountability-cli/tests/fixtures/: vulnerable_server.rs
daemon/crates/accountability-core/: Cargo.toml
daemon/crates/accountability-core/src/application/: proxy.rs
daemon/crates/accountability-core/src/domain/: jsonrpc.rs  mod.rs
daemon/crates/accountability-core/src/ports/: interceptor.rs  sandbox.rs
daemon/crates/accountability-proxy/src/: ledger_client.rs  lib.rs  stdio_proxy.rs
daemon/crates/accountability-sandbox/src/: lib.rs  macos.rs
daemon/policies/: fetch.json  filesystem.json
e2e-tests/: test_production_portal.py
ledger/: Dockerfile  main.py  railway.json  test_ledger.db  test_ledger.db-shm  test_ledger.db-wal  test_main.py
ledger/daemon/: .gitignore  Cargo.toml  LICENSE
ledger/daemon/crates/accountability-cli/: Cargo.toml
ledger/daemon/crates/accountability-cli/src/: main.rs
ledger/daemon/crates/accountability-core/src/: lib.rs
ledger/daemon/crates/accountability-core/src/domain/: audit.rs  policy.rs
ledger/daemon/crates/accountability-core/src/ports/: audit_sink.rs  mod.rs
ledger/daemon/crates/accountability-proxy/: Cargo.toml
ledger/daemon/crates/accountability-sandbox/: Cargo.toml
ledger/daemon/crates/accountability-sandbox/src/: landlock.rs  seccomp.rs
ledger/static/: _sha2.mjs  _u64.mjs  crypto.js  demo.html  ed25519.js  ed25519.mjs  package-lock.json  package.json  sha256.js  sha256.mjs  sha512.js  sha512.mjs  utils.mjs
proofs/: anchor_metadata_d077ebdca52b5cfe2938ba871360649392444977508cce6c7d862b04afea4924.json  chain_hash_d077ebdca52b5cfe2938ba871360649392444977508cce6c7d862b04afea4924.dat.ots
