[workspace]
resolver = "2"
members = [
    "crates/accountability-core",
    "crates/accountability-proxy",
    "crates/accountability-sandbox",
    "crates/accountability-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["yogami"]
license = "MIT"
repository = "https://github.com/yogami/autonomous-agent-accountability"
description = "Kernel-level security daemon for Model Context Protocol. Prevents prompt-injection data exfiltration."

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
glob-match = "0.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
