[package]
name = "accountability-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core domain logic for Autonomous Agent AccountabilityMCP security daemon"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
glob-match = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
