[package]
name = "accountability-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Stdio proxy for Autonomous Agent AccountabilityMCP - spawns and wraps MCP server processes"

[dependencies]
accountability-core = { path = "../accountability-core" }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.8", features = ["v4"] }
aes-gcm = "0.10"
rand = "0.8"
tracing = { workspace = true }
thiserror = { workspace = true }
url = "2.5.8"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
